--- a/example.html
+++ b/example.html
@@ -35,7 +35,7 @@
 </td>
 
 <td align=right valign=bottom>
-<a href="http://phpwhois.sourceforge.net">
+<a href="http://www.phpwhois.org">
 <img border=0 src="whois.icon.png" alt=""></img><br></br>
 </a>
 </td>
